# npy-plotter

./: .gitignore  README.md  pyproject.toml
npyplotter/: __main__.py  plot_npy.py
